# Labs2sem

lab1/: AnimatedText.cpp  AnimatedText.hpp  CMakeLists.txt  main.cpp
lab2/: CMakeLists.txt  main.cpp  string.cpp  string.hpp
lab3/: CMakeLists.txt  complex.hpp  main.cpp
lab4/: CMakeLists.txt  main.cpp
lab7/: CMakeLists.txt  GeometricShapes.cpp  GeometricShapes.hpp  main.cpp
